Bug 495155 - Recurring crash of the EWS resource
Summary: Recurring crash of the EWS resource
Status: RESOLVED FIXED
Alias: None
Product: Akonadi
Classification: Frameworks and Libraries
Component: EWS Resource (other bugs)
Version First Reported In: unspecified
Platform: Neon Linux
: NOR crash
Target Milestone: ---
Assignee: kdepim bugs
URL:
Keywords: drkonqi
Depends on:
Blocks:
 
Reported: 2024-10-21 18:32 UTC by Louis Moureaux
Modified: 2024-10-25 20:01 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
New crash information added by DrKonqi (70.58 KB, text/plain)
2024-10-21 18:32 UTC, Louis Moureaux
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Louis Moureaux 2024-10-21 18:32:54 UTC
Application: akonadi_ews_resource (6.2.2 (24.08.2))

ApplicationNotResponding [ANR]: false
Qt Version: 6.7.2
Frameworks Version: 6.7.0
Operating System: Linux 6.8.0-47-generic x86_64
Windowing System: Wayland
Distribution: KDE neon 6.2
DrKonqi: 6.2.1 [CoredumpBackend]

-- Information about the crash:
The EWS resource first stops syncing mails, then ends up crashing with the attached stack trace. After restarting akonadi, the resource works for some time then crashes again.

The crash can be reproduced every time.

-- Backtrace (Reduced):
#6  QScopedPointer<QObjectData, QScopedPointerDeleter<QObjectData> >::get (this=0x8, this=<optimized out>) at /usr/src/qt6-base-6.7.2-0zneon+24.04+noble+release+build3/src/corelib/tools/qscopedpointer.h:110
[...]
#9  QObject::deleteLater (this=0x0) at /usr/src/qt6-base-6.7.2-0zneon+24.04+noble+release+build3/src/corelib/kernel/qobject.cpp:2462
#10 0x00005840a7afb2a2 in EwsSubscriptionManager::getEventsRequestFinished (this=0x5840a93e5bd0, job=0x795d94117360) at /usr/src/kdepim-runtime-4:24.08.2-0zneon+24.04+noble+release+build7/resources/ews/ewssubscriptionmanager.cpp:175
#11 0x0000795e4c464d34 in QtPrivate::QSlotObjectBase::call (a=0x7fff05f2bc80, r=0x5840a93e5bd0, this=0x795d9410e030, this=<optimized out>, r=<optimized out>, a=<optimized out>) at /usr/src/qt6-base-6.7.2-0zneon+24.04+noble+release+build3/src/corelib/kernel/qobjectdefs_impl.h:469
#12 doActivate<false> (sender=0x795d94117360, signal_index=6, argv=0x7fff05f2bc80) at /usr/src/qt6-base-6.7.2-0zneon+24.04+noble+release+build3/src/corelib/kernel/qobject.cpp:4086


Reported using DrKonqi
Comment 1 Louis Moureaux 2024-10-21 18:32:55 UTC
Created attachment 175091 [details]
New crash information added by DrKonqi

DrKonqi auto-attaching complete backtrace.
Comment 2 Bug Janitor Service 2024-10-21 18:45:55 UTC
A possibly relevant merge request was started @ https://invent.kde.org/pim/kdepim-runtime/-/merge_requests/186
Comment 3 Louis Moureaux 2024-10-25 20:00:50 UTC
Git commit b4c8189185918c8fd120298edeac8a37217cd70c by Louis Moureaux.
Committed on 21/10/2024 at 18:40.
Pushed by carlschwan into branch 'master'.

EWS: Check that mEventReq is not null in EwsSubscriptionManager

This is only defensive programming to prevent a crash, I do not
understand the code deeply enough to do more.

M  +4    -2    resources/ews/ewssubscriptionmanager.cpp

https://invent.kde.org/pim/kdepim-runtime/-/commit/b4c8189185918c8fd120298edeac8a37217cd70c
Comment 4 Carl Schwan 2024-10-25 20:01:13 UTC
Git commit 21d14f3e349a01c574c8d1c288d6070a7e30dc6a by Carl Schwan.
Committed on 25/10/2024 at 20:01.
Pushed by carlschwan into branch 'release/24.08'.

EWS: Check that mEventReq is not null in EwsSubscriptionManager

This is only defensive programming to prevent a crash, I do not
understand the code deeply enough to do more.


(cherry picked from commit b4c8189185918c8fd120298edeac8a37217cd70c)

Co-authored-by: Louis Moureaux <m_louis30@yahoo.com>

M  +4    -2    resources/ews/ewssubscriptionmanager.cpp

https://invent.kde.org/pim/kdepim-runtime/-/commit/21d14f3e349a01c574c8d1c288d6070a7e30dc6a