EWS: Check that mEventReq is not null in EwsSubscriptionManager

This is only defensive programming to prevent a crash, I do not
understand the code deeply enough to do more.

BUG: 495155


(cherry picked from commit b4c8189185918c8fd120298edeac8a37217cd70c)

Co-authored-by: Louis Moureaux <m_louis30@yahoo.com>